--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Arif's Blog
+description: Things I learned or want to learn.
 github_username: arif332
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
@@ -39,8 +39,8 @@ baseurl: "/blog" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: earihos
+    github: arif332
 
 # Set this to true to get LaTeX math equation support
 use_math: 
@@ -56,6 +56,8 @@ annotations: false
 
 # Set this to true to display tags on each post
 show_tags: true
+
+comments: true
 
 # Add your Google Analytics ID here if you have one and want to use it
 google_analytics: 
