--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ show_tags: true
 comments: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: 
+google_analytics: G-6E6HHQK2QL
 
 exclude:
   - docker-compose.yml
